--- a/layouts/partials/postCard.html
+++ b/layouts/partials/postCard.html
@@ -1,16 +1,19 @@
 <article class="post-item">
-    <h4 class="post-item-title">
+    <h4 class="post-item-title" style="white-space: nowrap;">
         <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </h4>
     {{/* format date string to create an ISO 8601 string */}}
     {{ $ISO_date := "2006-01-02T15:04:05Z0700" }}
     {{ $configDateFormat := .Site.Params.dateFormat | default "2 Jan 2006" }}
+    <div class="post-meta" style="text-align: center; margin-left: 1rem; margin-right: 1rem; font-size: 80%;">
+        {{ .Description | default "" }}
+    </div>
     {{ if .Params.isStarred }}
     <div class="post-item-right">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="currentColor" class="icon-star"><path d="M16 23.027L24.24 28l-2.187-9.373 7.28-6.307-9.587-.827-3.747-8.827-3.747 8.827-9.587.827 7.267 6.307L7.759 28l8.24-4.973z"></path></svg>
     </div>
     {{ end }}
-    <time class="post-item-meta" datetime="{{ dateFormat $ISO_date .Date }}">
+    <time class="post-item-meta" datetime="{{ dateFormat $ISO_date .Date }}" style="white-space: nowrap;">
         {{ time.Format $configDateFormat .Date }}
         {{/* OLD FORMAT: .Date.Format $configDateFormat */}}
     </time>
