--- a/layouts/partials/postCard.html
+++ b/layouts/partials/postCard.html
@@ -5,7 +5,7 @@
     {{/* format date string to create an ISO 8601 string */}}
     {{ $ISO_date := "2006-01-02T15:04:05Z0700" }}
     {{ $configDateFormat := .Site.Params.dateFormat | default "2 Jan 2006" }}
-    <div class="post-meta" style="text-align: center; margin-left: 1rem; margin-right: 1rem; font-size: 80%;">
+    <div class="post-meta" style="display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; max-height: 2en; text-overflow: ellipsis; text-align: center; margin-left: 1rem; margin-right: 1rem; font-size: 80%;">
         {{ .Description | default "" }}
     </div>
     {{ if .Params.isStarred }}
