--- a/layouts/partials/reading-time.html
+++ b/layouts/partials/reading-time.html
@@ -3,5 +3,9 @@
 {{ $seconds := mod (div (mul .WordCount 60) $wpm) 60 }}
 
 <div class="post-meta" style="font-style: italic; font-size: 0.7em;">
-    {{ printf "%d words / est %dm %ds read" .WordCount $minutes $seconds }}
+    {{ if eq .Draft true }}
+        {{ printf "%d words / est %dm %ds read" .WordCount $minutes $seconds }}
+    {{ else }}
+        {{ printf "est %dm %ds read" $minutes $seconds }}
+    {{end}}
 </div>
